data/derived/comb/progs/unify/prog2989.ml.out
Characters 146-150:
  let (_, res) = List.fold_left f base args in
                                       ^^^^
Error: This expression has type ('a * 'b) list
       but an expression was expected of type int list list
       Type 'a * 'b is not compatible with type int list 
